// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Tracing feature with actions should generate action spans 1`] = `
[
  {
    "author": {
      "friends": 6,
      "id": 3,
      "name": "Hank Schrader",
    },
    "id": 1,
    "title": "Post 1",
  },
  {
    "author": {
      "friends": 2,
      "id": 1,
      "name": "Walter White",
    },
    "id": 2,
    "title": "Post 2",
  },
  {
    "author": {
      "friends": 4,
      "id": 2,
      "name": "Jesse Pinkman",
    },
    "id": 3,
    "title": "Post 3",
  },
]
`;

exports[`Test Tracing feature with actions should generate action spans 2`] = `
[
  {
    "error": null,
    "id": "broker-1-1",
    "logs": [],
    "name": "action 'posts.list'",
    "parentID": null,
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "posts",
      "name": "posts",
    },
    "tags": {
      "action": {
        "name": "posts.list",
        "rawName": "list",
      },
      "callerNodeID": "broker-1",
      "callingLevel": 1,
      "fromCache": false,
      "nodeID": "broker-1",
      "options": {},
      "params": null,
      "remoteCall": false,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
  {
    "error": null,
    "id": "broker-1-2",
    "logs": [],
    "name": "Get user by ID: 3",
    "parentID": "broker-1-1",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {
      "action": {
        "name": "users.get",
        "rawName": "get",
      },
      "callerNodeID": "broker-1",
      "callingLevel": 2,
      "fromCache": false,
      "nodeID": "broker-2",
      "options": {
        "retries": null,
        "timeout": 0,
      },
      "params": {
        "id": 3,
      },
      "remoteCall": true,
      "requestID": "broker-1-1",
      "response": {
        "name": "Hank Schrader",
      },
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
  {
    "error": null,
    "id": "broker-2-4",
    "logs": [],
    "name": "cloning",
    "parentID": "broker-1-2",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {
      "userID": 3,
    },
    "traceID": "broker-1-1",
    "type": "custom",
  },
  {
    "error": null,
    "id": "broker-2-9",
    "logs": [],
    "name": "action 'friends.count'",
    "parentID": "broker-1-2",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "friends",
      "name": "friends",
    },
    "tags": {
      "action": {
        "name": "friends.count",
        "rawName": "count",
      },
      "callerNodeID": "broker-2",
      "callingLevel": 3,
      "fromCache": false,
      "meta": {
        "user": {
          "name": "Superuser",
        },
      },
      "nodeID": "broker-3",
      "options": {
        "retries": null,
        "timeout": 0,
      },
      "params": {
        "id": 3,
      },
      "remoteCall": true,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
  {
    "error": null,
    "id": "broker-1-11",
    "logs": [],
    "name": "Get user by ID: 1",
    "parentID": "broker-1-1",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {
      "action": {
        "name": "users.get",
        "rawName": "get",
      },
      "callerNodeID": "broker-1",
      "callingLevel": 2,
      "fromCache": false,
      "nodeID": "broker-2",
      "options": {
        "retries": null,
        "timeout": 0,
      },
      "params": {
        "id": 1,
      },
      "remoteCall": true,
      "requestID": "broker-1-1",
      "response": {
        "name": "Walter White",
      },
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
  {
    "error": null,
    "id": "broker-2-13",
    "logs": [],
    "name": "cloning",
    "parentID": "broker-1-11",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {
      "userID": 1,
    },
    "traceID": "broker-1-1",
    "type": "custom",
  },
  {
    "error": null,
    "id": "broker-2-18",
    "logs": [],
    "name": "action 'friends.count'",
    "parentID": "broker-1-11",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "friends",
      "name": "friends",
    },
    "tags": {
      "action": {
        "name": "friends.count",
        "rawName": "count",
      },
      "callerNodeID": "broker-2",
      "callingLevel": 3,
      "fromCache": false,
      "meta": {
        "user": {
          "name": "Superuser",
        },
      },
      "nodeID": "broker-3",
      "options": {
        "retries": null,
        "timeout": 0,
      },
      "params": {
        "id": 1,
      },
      "remoteCall": true,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
  {
    "error": null,
    "id": "broker-1-20",
    "logs": [],
    "name": "Get user by ID: 2",
    "parentID": "broker-1-1",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {
      "action": {
        "name": "users.get",
        "rawName": "get",
      },
      "callerNodeID": "broker-1",
      "callingLevel": 2,
      "fromCache": false,
      "nodeID": "broker-2",
      "options": {
        "retries": null,
        "timeout": 0,
      },
      "params": {
        "id": 2,
      },
      "remoteCall": true,
      "requestID": "broker-1-1",
      "response": {
        "name": "Jesse Pinkman",
      },
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
  {
    "error": null,
    "id": "broker-2-22",
    "logs": [],
    "name": "cloning",
    "parentID": "broker-1-20",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {
      "userID": 2,
    },
    "traceID": "broker-1-1",
    "type": "custom",
  },
  {
    "error": null,
    "id": "broker-2-27",
    "logs": [],
    "name": "action 'friends.count'",
    "parentID": "broker-1-20",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "friends",
      "name": "friends",
    },
    "tags": {
      "action": {
        "name": "friends.count",
        "rawName": "count",
      },
      "callerNodeID": "broker-2",
      "callingLevel": 3,
      "fromCache": false,
      "meta": {
        "user": {
          "name": "Superuser",
        },
      },
      "nodeID": "broker-3",
      "options": {
        "retries": null,
        "timeout": 0,
      },
      "params": {
        "id": 2,
      },
      "remoteCall": true,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
]
`;

exports[`Test Tracing feature with actions should generate event spans 1`] = `
[
  {
    "error": null,
    "id": "broker-1-2",
    "logs": [],
    "name": "event 'comments.removed' in 'posts'",
    "parentID": null,
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "posts",
      "name": "posts",
    },
    "tags": {
      "callerNodeID": "broker-1",
      "callingLevel": 1,
      "event": {
        "name": "comments.removed",
      },
      "eventName": "comments.removed",
      "eventType": "emit",
      "nodeID": "broker-1",
      "params": null,
      "remoteCall": false,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "event",
  },
  {
    "error": null,
    "id": "broker-1-3",
    "logs": [],
    "name": "update posts",
    "parentID": "broker-1-2",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "posts",
      "name": "posts",
    },
    "tags": {},
    "traceID": "broker-1-1",
    "type": "custom",
  },
  {
    "error": null,
    "id": "broker-1-6",
    "logs": [
      {
        "fields": {
          "a": 5,
        },
        "name": "some changes",
      },
    ],
    "name": "event 'post.updated' in 'posts'",
    "parentID": "broker-1-3",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "posts",
      "name": "posts",
    },
    "tags": {
      "callerNodeID": "broker-1",
      "callingLevel": 2,
      "event": {
        "name": "post.updated",
      },
      "eventName": "post.updated",
      "eventType": "broadcastLocal",
      "nodeID": "broker-1",
      "params": null,
      "remoteCall": false,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "event",
  },
  {
    "error": null,
    "id": "broker-1-15",
    "logs": [],
    "name": "update others",
    "parentID": "broker-1-2",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "posts",
      "name": "posts",
    },
    "tags": {},
    "traceID": "broker-1-1",
    "type": "custom",
  },
  {
    "error": null,
    "id": "broker-2-19",
    "logs": [],
    "name": "User updated event",
    "parentID": "broker-1-15",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {
      "callerNodeID": "broker-1",
      "callingLevel": 2,
      "event": {
        "name": "user.updated",
      },
      "eventName": "user.updated",
      "eventType": "broadcast",
      "nodeID": "broker-2",
      "params": null,
      "remoteCall": true,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "event",
  },
  {
    "error": null,
    "id": "broker-2-20",
    "logs": [],
    "name": "updating user",
    "parentID": "broker-2-19",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "users",
      "name": "users",
    },
    "tags": {},
    "traceID": "broker-1-1",
    "type": "custom",
  },
  {
    "error": null,
    "id": "broker-2-21",
    "logs": [],
    "name": "action 'friends.count'",
    "parentID": "broker-2-20",
    "priority": 5,
    "sampled": true,
    "service": {
      "fullName": "friends",
      "name": "friends",
    },
    "tags": {
      "action": {
        "name": "friends.count",
        "rawName": "count",
      },
      "callerNodeID": "broker-2",
      "callingLevel": 3,
      "fromCache": false,
      "meta": {
        "user": {
          "name": "Superuser",
        },
      },
      "nodeID": "broker-3",
      "options": {
        "retries": null,
        "timeout": 0,
      },
      "params": {
        "userID": 2,
      },
      "remoteCall": true,
      "requestID": "broker-1-1",
    },
    "traceID": "broker-1-1",
    "type": "action",
  },
]
`;
